--- a/themes/inhabitant/sass/style.scss
+++ b/themes/inhabitant/sass/style.scss
@@ -63,11 +63,5 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "content";
 @import "media";
 @import "page-templates";
-
-@import "about";
-@import "front-page";
-@import "contact";
-@import "journal";
-@import "shop";
-@import "sidebar";
 @import "footer";
+@import "header";
