about page updated

--- a/themes/inhabitant/sass/_header.scss
+++ b/themes/inhabitant/sass/_header.scss
@@ -1,1 +1,25 @@
+.header-logo-img{
+ 
 
+}
+
+
+
+
+.site-navigation{
+    display: flex;
+
+}
+
+.menu{
+    display: flex;
+    justify-content: space-between;
+  
+}
+
+
+.list-item li{
+    list-style: none;
+	//display: inline-block;
+	padding: 0 40px;
+}
