--- a/themes/inhabitant/sass/_page-templates.scss
+++ b/themes/inhabitant/sass/_page-templates.scss
@@ -5,4 +5,44 @@
 /* Front page */
 
 
+.about {
+.entry-content .hero-image-header{
+    height: 100vh;
+    background-size: cover cover;
+    background: linear-gradient( to bottom, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 100% ), no-repeat center bottom;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    
+}
 
+.entry-title {
+    text-align: center;
+    margin-bottom: 0;
+    color: #fff;
+    text-transform: uppercase;
+}
+.entry-content h2 {
+    text-align: center;
+    font-size: 2.1rem;
+    color: #2f1339;
+    margin-bottom: 1.5rem;
+    line-height: 1.25rem;
+    font-family: Novecento Sans Web,sans-serif;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+.entry-content p {
+
+    color: #404040;
+    font-family: Merriweather Web;
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.75;
+    max-width: 800px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+}
