--- a/themes/inhabitant/style.css
+++ b/themes/inhabitant/style.css
@@ -711,6 +711,47 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
+.about .entry-content .hero-image-header {
+  height: 100vh;
+  background-size: cover cover;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), no-repeat center bottom;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%), no-repeat center bottom;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.about .entry-title {
+  text-align: center;
+  margin-bottom: 0;
+  color: #fff;
+  text-transform: uppercase; }
+
+.about .entry-content h2 {
+  text-align: center;
+  font-size: 2.1rem;
+  color: #2f1339;
+  margin-bottom: 1.5rem;
+  line-height: 1.25rem;
+  font-family: Novecento Sans Web,sans-serif;
+  letter-spacing: 2px;
+  text-transform: uppercase; }
+
+.about .entry-content p {
+  color: #404040;
+  font-family: Merriweather Web;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 1.75;
+  max-width: 800px;
+  margin-right: auto;
+  margin-left: auto; }
+
 .site-footer {
   color: #fff; }
   .site-footer .footer-bar {
@@ -755,3 +796,20 @@ object {
     font-size: 16px;
     font-weight: lighter;
     padding-bottom: 1rem; }
+
+.site-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.list-item li {
+  list-style: none;
+  padding: 0 40px; }
