--- a/themes/inhabitant/style.css
+++ b/themes/inhabitant/style.css
@@ -813,3 +813,40 @@ object {
 .list-item li {
   list-style: none;
   padding: 0 40px; }
+
+.site-main {
+  border-right: 1px solid #e1e1e1;
+  padding-right: 5%;
+  width: 73%; }
+  .site-main .entry-content p {
+    width: 650px; }
+  .site-main .entry-header {
+    position: relative;
+    -o-object-fit: cover;
+       object-fit: cover; }
+    .site-main .entry-header .entry-meta {
+      background-color: #248a83;
+      bottom: 0;
+      color: #fff;
+      display: inline-block;
+      font-family: Novecento Sans Web,sans-serif;
+      padding: .4rem;
+      position: absolute;
+      right: 0;
+      text-transform: uppercase; }
+  .site-main .entry-title {
+    background-color: #248a83;
+    color: #fff;
+    font-size: 33.6px;
+    font-size: 2.1rem;
+    left: 0;
+    padding: .75rem 1.5rem;
+    position: absolute;
+    margin-top: 2.25rem;
+    max-width: 75%;
+    top: 0; }
+    .site-main .entry-title a {
+      font-family: sans-serif;
+      color: #fff; }
+  .site-main .side-bar {
+    margin-left: 200px; }
