--- a/themes/inhabitant/sass/_widgets.scss
+++ b/themes/inhabitant/sass/_widgets.scss
@@ -49,3 +49,19 @@
 .widget_search .search-submit {
 	display: none;
 }
+
+.widget-area {
+    width: 500px;
+    padding: 40px 30px;
+    border-left: 0px;
+    & div {
+      margin: 20px 0;
+      border: 0px;
+    }
+    & a {
+      color:#248a83; ;
+    }
+    & a:hover {
+      color:#248a83 ;
+    }
+  }
