--- a/themes/inhabitant/sass/_content.scss
+++ b/themes/inhabitant/sass/_content.scss
@@ -47,3 +47,11 @@
 .bypostauthor {
 	display: block;
 }
+
+.site-content {
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1120px;
+}
