--- a/themes/inhabitant/sass/_header.scss
+++ b/themes/inhabitant/sass/_header.scss
@@ -1,25 +1,34 @@
-.header-logo-img{
- 
-
-}
-
-
-
-
-.site-navigation{
+.site-header {
     display: flex;
-
-}
-
-.menu{
-    display: flex;
+    align-items: center;
     justify-content: space-between;
-  
-}
+    margin: 0 auto;
+    max-width: 1120px;
+    color: $color__header-text;
 
+    .header-logo-img {
+        height: 33px;
+        width: 50px;
+    }
 
-.list-item li{
-    list-style: none;
-	//display: inline-block;
-	padding: 0 40px;
+    nav.site-navigation {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        ul.menu {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+    
+            .list-item {
+                padding-right: 24px;
+                display: inline;
+
+                a {
+                    color: $color__header-text;
+                }
+            }
+        }
+    }
 }
