--- a/themes/inhabitant/sass/_variables.scss
+++ b/themes/inhabitant/sass/_variables.scss
@@ -19,6 +19,8 @@ $color__link: royalblue;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
 
+$color__header-text: #248A83;
+
 // Typography
 
 $font__main: sans-serif;
