--- a/themes/inhabitant/sass/journal.scss
+++ b/themes/inhabitant/sass/journal.scss
@@ -1,10 +1,8 @@
 .site-main {
     border-right: 1px solid #e1e1e1;
-    padding-right: 5%;
-    width: 73%;
 
 & .content-area {
-   // max-width: 800px;
+   max-width: 800px;
   }
 
   & .entry-content {
