--- a/themes/inhabitant/style.css
+++ b/themes/inhabitant/style.css
@@ -659,6 +659,14 @@ a {
 .bypostauthor {
   display: block; }
 
+.site-content {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1120px; }
+
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
@@ -809,27 +817,46 @@ object {
     font-weight: lighter;
     padding-bottom: 1rem; }
 
-.site-navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-
-.menu {
+.site-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
-
-.list-item li {
-  list-style: none;
-  padding: 0 40px; }
+          justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1120px;
+  color: #248A83; }
+  .site-header .header-logo-img {
+    height: 33px;
+    width: 50px; }
+  .site-header nav.site-navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .site-header nav.site-navigation ul.menu {
+      list-style-type: none;
+      padding: 0;
+      margin: 0; }
+      .site-header nav.site-navigation ul.menu .list-item {
+        padding-right: 24px;
+        display: inline; }
+        .site-header nav.site-navigation ul.menu .list-item a {
+          color: #248A83; }
 
 .site-main {
-  border-right: 1px solid #e1e1e1;
-  padding-right: 5%;
-  width: 73%; }
+  border-right: 1px solid #e1e1e1; }
+  .site-main .content-area {
+    max-width: 800px; }
   .site-main .entry-content p {
     width: 650px; }
   .site-main .entry-header {
