--- a/themes/inhabitant/style.css
+++ b/themes/inhabitant/style.css
@@ -731,7 +731,21 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-.about .entry-content .hero-image-header {
+.page-about .site-header {
+  position: absolute;
+  background: transparent;
+  color: #fff;
+  border: none; }
+  .page-about .site-header .site-navigation ul.menu li.list-item a {
+    color: #fff; }
+  .page-about .site-header nav.site-navigation .search-toggle {
+    color: #fff; }
+
+.page-about .site-content {
+  margin-left: initial;
+  margin-right: initial; }
+
+.page-about .about-container .entry-content .hero-image-header {
   height: 100vh;
   background-size: cover cover;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), no-repeat center bottom;
@@ -744,15 +758,21 @@ object {
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          justify-content: center; }
+          justify-content: center;
+  height: 100vh;
+  width: 100vw; }
 
-.about .entry-title {
-  text-align: center;
-  margin-bottom: 0;
+.page-about .about-container .hentry {
+  margin: 0; }
+
+.page-about .about-container .entry-content {
+  margin: 0; }
+
+.page-about .about-container .entry-title {
   color: #fff;
-  text-transform: uppercase; }
+  font-size: 48px; }
 
-.about .entry-content h2 {
+.page-about .about-container .entry-content h2 {
   text-align: center;
   font-size: 2.1rem;
   color: #2f1339;
@@ -762,7 +782,7 @@ object {
   letter-spacing: 2px;
   text-transform: uppercase; }
 
-.about .entry-content p {
+.page-about .about-container .entry-content p {
   color: #404040;
   font-family: Merriweather Web;
   font-size: 16px;
@@ -818,18 +838,27 @@ object {
     padding-bottom: 1rem; }
 
 .site-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin: 0 auto;
-  max-width: 1120px;
-  color: #248A83; }
+  color: #248A83;
+  border-bottom: 1px solid #e1e1e1;
+  padding: 8px 0;
+  position: fixed;
+  top: 32px;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background: rgba(255, 255, 255, 0.85); }
+  .site-header .container {
+    margin: 0 auto;
+    max-width: 1120px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
   .site-header .header-logo-img {
     height: 33px;
     width: 50px; }
@@ -852,18 +881,103 @@ object {
         display: inline; }
         .site-header nav.site-navigation ul.menu .list-item a {
           color: #248A83; }
+    .site-header nav.site-navigation .search-form {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+    .site-header nav.site-navigation .search-toggle {
+      color: #248A83;
+      margin-right: 24px;
+      cursor: pointer; }
+    .site-header nav.site-navigation .search-container {
+      display: none; }
+      .site-header nav.site-navigation .search-container .search-field {
+        border: none;
+        cursor: text; }
 
-.site-main {
-  border-right: 1px solid #e1e1e1; }
-  .site-main .content-area {
+.shop-page-header {
+  border-bottom: 1px dashed #c8c8c8;
+  margin-bottom: 3rem;
+  text-align: center;
+  display: none;
+  margin-top: 105px; }
+  .post-type-archive .shop-page-header {
+    display: block; }
+  .shop-page-header .product-type-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-family: Novecento Sans Web,sans-serif;
+    font-size: 19.2px;
+    font-size: 1.2rem;
+    -ms-flex-pack: center;
+    -webkit-box-pack: center;
+            justify-content: center;
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+    text-transform: uppercase; }
+    .shop-page-header .product-type-list li {
+      margin: 0 1.5rem; }
+      .shop-page-header .product-type-list li a {
+        color: #248a83;
+        text-decoration: none; }
+
+.regular-header-logo {
+  display: block; }
+  .page-about .regular-header-logo {
+    display: none; }
+
+.about-header-logo {
+  display: none; }
+  .page-about .about-header-logo {
+    display: block; }
+
+.journal-type {
+  padding-top: 57px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1120px; }
+  .journal-type #primary {
+    width: 73%;
+    padding-right: 5%;
+    border-right: 1px solid #e1e1e1;
+    padding-top: 48px;
+    padding-bottom: 48px; }
+    .journal-type #primary .journal-button {
+      background: transparent;
+      border-radius: 0;
+      cursor: pointer;
+      font-family: Novecento Sans Web,sans-serif;
+      font-size: 14.4px;
+      font-size: .9rem;
+      line-height: 1;
+      padding: .75rem 1.5rem;
+      text-decoration: none;
+      text-transform: uppercase;
+      border: 1px solid #000;
+      color: #000; }
+      .journal-type #primary .journal-button:hover {
+        background: #248a83;
+        border-color: #fff;
+        color: #fff; }
+  .journal-type #secondary {
+    width: 27%;
+    padding-left: 5%; }
+  .journal-type .site-main .content-area {
     max-width: 800px; }
-  .site-main .entry-content p {
-    width: 650px; }
-  .site-main .entry-header {
+  .journal-type .site-main .entry-header {
     position: relative;
     -o-object-fit: cover;
-       object-fit: cover; }
-    .site-main .entry-header .entry-meta {
+       object-fit: cover;
+    line-height: 0; }
+    .journal-type .site-main .entry-header .entry-meta {
       background-color: #248a83;
       bottom: 0;
       color: #fff;
@@ -873,7 +987,7 @@ object {
       position: absolute;
       right: 0;
       text-transform: uppercase; }
-  .site-main .entry-title {
+  .journal-type .site-main .entry-title {
     background-color: #248a83;
     color: #fff;
     font-size: 33.6px;
@@ -883,9 +997,80 @@ object {
     position: absolute;
     margin-top: 2.25rem;
     max-width: 75%;
-    top: 0; }
-    .site-main .entry-title a {
+    top: 0;
+    line-height: 1.25; }
+    .journal-type .site-main .entry-title a {
       font-family: sans-serif;
       color: #fff; }
-  .site-main .side-bar {
-    margin-left: 200px; }
+
+.archive-product-type {
+  width: 100%;
+  margin-top: 57px;
+  padding-top: 48px; }
+  .archive-product-type .shop-page-header {
+    display: block; }
+  .archive-product-type .site-main {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1.5rem;
+    margin-bottom: 1.5rem; }
+    .archive-product-type .site-main article {
+      border: 1px solid #e1e1e1; }
+      .archive-product-type .site-main article .entry-header {
+        position: relative;
+        height: 250px;
+        overflow: hidden; }
+        .archive-product-type .site-main article .entry-header img {
+          left: 50%;
+          max-height: 250px;
+          max-width: none;
+          position: absolute;
+          top: 50%;
+          -webkit-transform: translate(-50%, -52%);
+                  transform: translate(-50%, -52%);
+          width: auto;
+          -o-object-fit: cover;
+             object-fit: cover; }
+      .archive-product-type .site-main article .entry-title {
+        padding: 12px 16px;
+        margin: 0;
+        font-weight: normal; }
+        .archive-product-type .site-main article .entry-title a {
+          font-size: 14px;
+          color: #000; }
+
+.archive-product-type {
+  width: 100%;
+  margin-top: 57px;
+  padding-top: 48px; }
+  .archive-product-type .shop-page-header {
+    display: block; }
+  .archive-product-type .site-main {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1.5rem;
+    margin-bottom: 1.5rem; }
+    .archive-product-type .site-main article {
+      border: 1px solid #e1e1e1; }
+      .archive-product-type .site-main article .entry-header {
+        position: relative;
+        height: 250px;
+        overflow: hidden; }
+        .archive-product-type .site-main article .entry-header img {
+          left: 50%;
+          max-height: 250px;
+          max-width: none;
+          position: absolute;
+          top: 50%;
+          -webkit-transform: translate(-50%, -52%);
+                  transform: translate(-50%, -52%);
+          width: auto;
+          -o-object-fit: cover;
+             object-fit: cover; }
+      .archive-product-type .site-main article .entry-title {
+        padding: 12px 16px;
+        margin: 0;
+        font-weight: normal; }
+        .archive-product-type .site-main article .entry-title a {
+          font-size: 14px;
+          color: #000; }
