--- a/themes/inhabitant/sass/style.scss
+++ b/themes/inhabitant/sass/style.scss
@@ -66,6 +66,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "footer";
 @import "header";
 @import "journal";
-@import "shop-taxonomy";
 @import "single-product";
 @import "shop-taxonomy";
+@import "front-page";
+@import "adventures";
