--- a/themes/inhabitant/style.css
+++ b/themes/inhabitant/style.css
@@ -659,7 +659,7 @@ a {
 .bypostauthor {
   display: block; }
 
-.site-content {
+body:not(.home).site-content {
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
@@ -1039,38 +1039,92 @@ object {
           font-size: 14px;
           color: #000; }
 
-.archive-product-type {
-  width: 100%;
-  margin-top: 57px;
-  padding-top: 48px; }
-  .archive-product-type .shop-page-header {
-    display: block; }
-  .archive-product-type .site-main {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1.5rem;
-    margin-bottom: 1.5rem; }
-    .archive-product-type .site-main article {
-      border: 1px solid #e1e1e1; }
-      .archive-product-type .site-main article .entry-header {
-        position: relative;
-        height: 250px;
-        overflow: hidden; }
-        .archive-product-type .site-main article .entry-header img {
-          left: 50%;
-          max-height: 250px;
-          max-width: none;
-          position: absolute;
-          top: 50%;
-          -webkit-transform: translate(-50%, -52%);
-                  transform: translate(-50%, -52%);
-          width: auto;
-          -o-object-fit: cover;
-             object-fit: cover; }
-      .archive-product-type .site-main article .entry-title {
-        padding: 12px 16px;
-        margin: 0;
-        font-weight: normal; }
-        .archive-product-type .site-main article .entry-title a {
-          font-size: 14px;
-          color: #000; }
+.home h2 {
+  font-size: 2.4rem;
+  margin-bottom: 3.75rem;
+  text-align: center; }
+
+.home .content-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1120px; }
+
+.home-hero {
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+          align-items: center;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), #969696 url(../../images/home-hero.jpg) no-repeat top;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0, rgba(0, 0, 0, 0.4)), #969696 url(../../images/home-hero.jpg) no-repeat top;
+  background-size: cover,cover;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -ms-flex-pack: center;
+  -webkit-box-pack: center;
+          justify-content: center;
+  height: 100vh; }
+
+.home .header-logo-img {
+  display: inline; }
+
+.home__products {
+  margin-bottom: 4.5rem; }
+  .home__productsWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    text-align: center; }
+  .home__productsType {
+    border: 1px solid orange;
+    border-top-width: 5px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 23.5%;
+            flex: 0 1 23.5%;
+    max-width: 23.5%;
+    padding: .75rem; }
+    .home__productsType:hover {
+      border: 1px solid orange;
+      border-top-width: 5px; }
+    .home__productsType img {
+      width: 70px;
+      height: 70px; }
+
+.home__journals {
+  margin-bottom: 4.5rem; }
+  .home__journals ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    list-style-type: none;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-left: 0; }
+  .home__journals li {
+    border: 1px solid #e1e1e1;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 32%;
+            flex: 0 1 32%;
+    position: relative; }
+  .home__journalsThumbnail {
+    background-color: #e1e1e1;
+    height: 250px;
+    overflow: hidden;
+    position: relative; }
+  .home__journalsInfo {
+    padding: 0.75rem;
+    padding-bottom: 1rem; }
+  .home__journals h3 {
+    font-size: 1.3rem;
+    margin-bottom: 1.75rem; }
+  .home__journals .entry-meta {
+    font-size: .75rem; }
