jquery implemented on header

--- a/themes/inhabitant/sass/_fonts.scss
+++ b/themes/inhabitant/sass/_fonts.scss
@@ -9,7 +9,7 @@
 // Novecento
 
 @font-face {
-  font-family: 'Novocento Sans';
+  font-family: 'Novocento Sans Normal';
   src: url('../../fonts/novecentosanswide-normal-webfont.eot');
   src: url('../../fonts/novecentosanswide-normal-webfont.eot?#iefix') format('embedded-opentype'),
     url('../../fonts/novecentosanswide-normal-webfont.woff2') format('woff2'),
@@ -21,7 +21,7 @@
 }
 
 @font-face {
-  font-family: 'Novocento Sans';
+  font-family: 'Novocento Sans Demibold';
   src: url('../../fonts/novecentosanswide-demibold-webfont.eot');
   src: url('../../fonts/novecentosanswide-demibold-webfont.eot?#iefix') format('embedded-opentype'),
     url('../../fonts/novecentosanswide-demibold-webfont.woff2') format('woff2'),
