--- a/themes/inhabitant/sass/style.scss
+++ b/themes/inhabitant/sass/style.scss
@@ -69,4 +69,5 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "single-product";
 @import "shop-taxonomy";
 @import "front-page";
-@import "adventures";
+@import "find-us";
+@import "taxonomy";
