--- a/themes/inhabitant/sass/_forms.scss
+++ b/themes/inhabitant/sass/_forms.scss
@@ -4,30 +4,28 @@
 
 /* Buttons */
 
+/* Buttons */
 button,
+.btn,
+.white-btn,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
-	border-color: #ccc #ccc #bbb;
-	border-radius: 3px;
-	background: #e6e6e6;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: rgba(0, 0, 0, .8);
-	@include font-size(0.75);
-	line-height: 1;
-	padding: .6rem 1rem .4rem;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-
-	&:hover {
-		border-color: #ccc #bbb #aaa;
-		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
-	}
-
-	&:active,
-	&:focus {
-		border-color: #aaa #bbb #bbb;
-		box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
+	background: #248a83;
+    border: none;
+    border-radius: 0;
+    color: #fff;
+    cursor: pointer;
+    font-family: Novecento Sans Web,sans-serif;
+    font-size: 14.4px;
+    font-size: .9rem;
+    line-height: 1;
+    padding: .75rem 1.5rem;
+    text-decoration: none;
+	text-transform: uppercase;
+	&:hover{
+		background: #19625d;
+    	color: #fff;
 	}
 }
 
@@ -41,7 +39,8 @@ input[type="search"],
 textarea {
 	color: #666;
 	border: 1px solid #ccc;
-	border-radius: 3px;
+	border-radius: 0;
+    background-color: #f4f4f4;
 
 	&:focus {
 		color: #111;
@@ -53,10 +52,27 @@ input[type="email"],
 input[type="url"],
 input[type="password"],
 input[type="search"] {
-	padding: 3px;
+	padding: .3rem;
 }
 
 textarea {
 	padding-left: 3px;
 	width: 100%;
+}
+
+fieldset{
+	border: 0;
+    padding: 0;
+    padding-bottom: .75rem;
+    margin: 0;
+}
+
+label {
+    color: #2f1339;
+    display: block;
+    font-family: Novecento Sans Web,sans-serif;
+    font-size: 17.6px;
+    font-size: 1.1rem;
+    margin-bottom: .5rem;
+    text-transform: uppercase;
 }
