--- a/themes/inhabitant/sass/_navigation.scss
+++ b/themes/inhabitant/sass/_navigation.scss
@@ -6,14 +6,11 @@
 
 a {
 	color: $color__link;
-
-	&:visited {
-		color: $color__link-visited;
-	}
+	text-decoration: none;
 	&:hover,
 	&:focus,
 	&:active {
-		color: $color__link-hover;
+		color: $color__link-visited;
 	}
 	&:focus {
 		outline: thin dotted;
