--- a/themes/inhabitant/sass/_shop-taxonomy.scss
+++ b/themes/inhabitant/sass/_shop-taxonomy.scss
@@ -4,7 +4,37 @@
     padding-top: 48px;
 
     .shop-page-header {
-        display: block;
+        border-bottom: 1px dashed #c8c8c8;
+        margin-bottom: 3rem;
+        text-align: center;
+       // display: none;
+        margin-top: 105px;
+    
+        .post-type-archive & {
+            display: block;
+        }
+    
+        .product-type-list {
+            display: flex;
+            font-family: Novecento Sans Web,sans-serif;
+            font-size: 19.2px;
+            font-size: 1.2rem;
+            -ms-flex-pack: center;
+            justify-content: center;
+            list-style-type: none;
+            margin-left: 0;
+            padding-left: 0;
+            text-transform: uppercase;
+    
+            li {
+                margin: 0 1.5rem;
+    
+                a {
+                    color: #248a83;
+                    text-decoration: none;
+                }
+            }
+        }
     }
 
     .site-main {
