--- a/themes/inhabitant/style.css
+++ b/themes/inhabitant/style.css
@@ -227,14 +227,14 @@ th {
 # Embedded Fonts
 --------------------------------------------------------------*/
 @font-face {
-  font-family: 'Novocento Sans';
+  font-family: 'Novocento Sans Normal';
   src: url("../../fonts/novecentosanswide-normal-webfont.eot");
   src: url("../../fonts/novecentosanswide-normal-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/novecentosanswide-normal-webfont.woff2") format("woff2"), url("../../fonts/novecentosanswide-normal-webfont.woff") format("woff"), url("../../fonts/novecentosanswide-normal-webfont.ttf") format("truetype"), url("../../fonts/novecentosanswide-normal-webfont.svg#novecento_sans_widenormal") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: 'Novocento Sans';
+  font-family: 'Novocento Sans Demibold';
   src: url("../../fonts/novecentosanswide-demibold-webfont.eot");
   src: url("../../fonts/novecentosanswide-demibold-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/novecentosanswide-demibold-webfont.woff2") format("woff2"), url("../../fonts/novecentosanswide-demibold-webfont.woff") format("woff"), url("../../fonts/novecentosanswide-demibold-webfont.ttf") format("truetype"), url("../../fonts/novecentosanswide-demibold-webfont.svg#novecento_sans_widedemibold") format("svg");
   font-weight: bold;
@@ -370,39 +370,33 @@ table {
 # Forms
 --------------------------------------------------------------*/
 /* Buttons */
+/* Buttons */
 button,
+.btn,
+.white-btn,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-  border: 1px solid;
-  border-color: #ccc #ccc #bbb;
-  border-radius: 3px;
-  background: #e6e6e6;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-  color: rgba(0, 0, 0, 0.8);
-  font-size: 12px;
-  font-size: 0.75rem;
+  background: #248a83;
+  border: none;
+  border-radius: 0;
+  color: #fff;
+  cursor: pointer;
+  font-family: Novecento Sans Web,sans-serif;
+  font-size: 14.4px;
+  font-size: .9rem;
   line-height: 1;
-  padding: .6rem 1rem .4rem;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8); }
+  padding: .75rem 1.5rem;
+  text-decoration: none;
+  text-transform: uppercase; }
   button:hover,
+  .btn:hover,
+  .white-btn:hover,
   input[type="button"]:hover,
   input[type="reset"]:hover,
   input[type="submit"]:hover {
-    border-color: #ccc #bbb #aaa;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
-            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02); }
-  button:active, button:focus,
-  input[type="button"]:active,
-  input[type="button"]:focus,
-  input[type="reset"]:active,
-  input[type="reset"]:focus,
-  input[type="submit"]:active,
-  input[type="submit"]:focus {
-    border-color: #aaa #bbb #bbb;
-    -webkit-box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
-            box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15); }
+    background: #19625d;
+    color: #fff; }
 
 /* Fields */
 input[type="text"],
@@ -413,7 +407,8 @@ input[type="search"],
 textarea {
   color: #666;
   border: 1px solid #ccc;
-  border-radius: 3px; }
+  border-radius: 0;
+  background-color: #f4f4f4; }
   input[type="text"]:focus,
   input[type="email"]:focus,
   input[type="url"]:focus,
@@ -427,22 +422,36 @@ input[type="email"],
 input[type="url"],
 input[type="password"],
 input[type="search"] {
-  padding: 3px; }
+  padding: .3rem; }
 
 textarea {
   padding-left: 3px;
   width: 100%; }
+
+fieldset {
+  border: 0;
+  padding: 0;
+  padding-bottom: .75rem;
+  margin: 0; }
+
+label {
+  color: #2f1339;
+  display: block;
+  font-family: Novecento Sans Web,sans-serif;
+  font-size: 17.6px;
+  font-size: 1.1rem;
+  margin-bottom: .5rem;
+  text-transform: uppercase; }
 
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
 /* Links */
 a {
-  color: royalblue; }
-  a:visited {
-    color: purple; }
+  color: royalblue;
+  text-decoration: none; }
   a:hover, a:focus, a:active {
-    color: midnightblue; }
+    color: purple; }
   a:focus {
     outline: thin dotted; }
   a:hover, a:active {
@@ -731,14 +740,14 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-.page-about .site-header {
+.about-page-header .site-header {
   position: absolute;
   background: transparent;
   color: #fff;
   border: none; }
-  .page-about .site-header .site-navigation ul.menu li.list-item a {
+  .about-page-header .site-header .site-navigation ul.menu li.list-item a {
     color: #fff; }
-  .page-about .site-header nav.site-navigation .search-toggle {
+  .about-page-header .site-header nav.site-navigation .search-toggle {
     color: #fff; }
 
 .page-about .site-content {
@@ -759,7 +768,6 @@ object {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 100vh;
   width: 100vw; }
 
 .page-about .about-container .hentry {
@@ -792,50 +800,58 @@ object {
   margin-right: auto;
   margin-left: auto; }
 
+.site-content {
+  margin: auto;
+  max-width: 1120px; }
+
 .site-footer {
-  color: #fff; }
-  .site-footer .footer-bar {
-    position: relative;
+  width: 100%;
+  height: 355px;
+  padding-top: 4rem;
+  color: white;
+  line-height: 1.4; }
+  .site-footer .container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    width: 100%;
-    padding: 2rem 2rem 0 2rem; }
-  .site-footer .footer-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex; }
-  .site-footer .contact-info {
-    line-height: 2.5rem;
-    padding-right: 70px; }
-    .site-footer .contact-info a:hover {
-      text-decoration: underline;
-      color: #fff; }
-  .site-footer .contact-info h3 {
-    font-size: 18px; }
-  .site-footer .email,
-  .site-footer .links {
-    font-family: "Merriweather"; }
-  .site-footer .social-media {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100px;
-    font-size: 25px;
-    margin-top: 15px;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between; }
-  .site-footer .legal {
-    margin: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
-    font-weight: lighter;
-    padding-bottom: 1rem; }
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    max-width: 1120px;
+    margin: auto; }
+    .site-footer .container .contact, .site-footer .container .business {
+      width: 25%; }
+    .site-footer .container .footer-logo {
+      height: 50px;
+      width: 50%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: end;
+          -ms-flex-pack: end;
+              justify-content: flex-end; }
+    .site-footer .container .site-info {
+      text-align: center;
+      width: 100%;
+      font-family: sans-serif;
+      text-transform: uppercase;
+      margin-bottom: 0; }
+  .site-footer h3 {
+    color: #d99054;
+    margin-bottom: 1.5rem; }
+  .site-footer p span {
+    font-weight: bold; }
+  .site-footer i {
+    margin: 0 .4rem;
+    width: 1rem; }
+    .site-footer i:first-child {
+      margin-left: 0; }
+  .site-footer a {
+    color: white; }
+    .site-footer a:hover {
+      text-decoration: underline; }
 
 .site-header {
   color: #248A83;
@@ -896,35 +912,10 @@ object {
       display: none; }
       .site-header nav.site-navigation .search-container .search-field {
         border: none;
-        cursor: text; }
-
-.shop-page-header {
-  border-bottom: 1px dashed #c8c8c8;
-  margin-bottom: 3rem;
-  text-align: center;
-  display: none;
-  margin-top: 105px; }
-  .post-type-archive .shop-page-header {
-    display: block; }
-  .shop-page-header .product-type-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    font-family: Novecento Sans Web,sans-serif;
-    font-size: 19.2px;
-    font-size: 1.2rem;
-    -ms-flex-pack: center;
-    -webkit-box-pack: center;
-            justify-content: center;
-    list-style-type: none;
-    margin-left: 0;
-    padding-left: 0;
-    text-transform: uppercase; }
-    .shop-page-header .product-type-list li {
-      margin: 0 1.5rem; }
-      .shop-page-header .product-type-list li a {
-        color: #248a83;
-        text-decoration: none; }
+        cursor: text;
+        background: transparent;
+        border-bottom: 1px solid #999;
+        font-size: 16px; }
 
 .regular-header-logo {
   display: block; }
@@ -933,7 +924,7 @@ object {
 
 .about-header-logo {
   display: none; }
-  .page-about .about-header-logo {
+  .page-about .about-header-logo, .page-home .about-header-logo {
     display: block; }
 
 .journal-type {
@@ -1003,12 +994,83 @@ object {
       font-family: sans-serif;
       color: #fff; }
 
+.single-product_type .site-main .one-product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.single-product_type .site-main .one-product .product-img {
+  width: 540px;
+  margin-right: 50px; }
+  .single-product_type .site-main .one-product .product-img img {
+    width: 100%;
+    height: auto; }
+
+.single-product_type .site-main .one-product .product-desc {
+  width: 540px; }
+  .single-product_type .site-main .one-product .product-desc h1 {
+    color: #d99054;
+    text-transform: uppercase;
+    margin: 0; }
+  .single-product_type .site-main .one-product .product-desc h2 {
+    font-size: 1.8rem;
+    letter-spacing: .5px;
+    font-weight: normal; }
+  .single-product_type .site-main .one-product .product-desc .social-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 5px; }
+  .single-product_type .site-main .one-product .product-desc .black-btn {
+    background-color: transparent;
+    border: 1px solid #000;
+    color: #000;
+    line-height: 1;
+    letter-spacing: normal;
+    margin-right: 6px; }
+
+.single-product_type #primary {
+  margin-top: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
 .archive-product-type {
   width: 100%;
   margin-top: 57px;
   padding-top: 48px; }
   .archive-product-type .shop-page-header {
-    display: block; }
+    border-bottom: 1px dashed #c8c8c8;
+    margin-bottom: 3rem;
+    text-align: center;
+    margin-top: 105px; }
+    .post-type-archive .archive-product-type .shop-page-header {
+      display: block; }
+    .archive-product-type .shop-page-header .product-type-list {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      font-family: Novecento Sans Web,sans-serif;
+      font-size: 19.2px;
+      font-size: 1.2rem;
+      -ms-flex-pack: center;
+      -webkit-box-pack: center;
+              justify-content: center;
+      list-style-type: none;
+      margin-left: 0;
+      padding-left: 0;
+      text-transform: uppercase; }
+      .archive-product-type .shop-page-header .product-type-list li {
+        margin: 0 1.5rem; }
+        .archive-product-type .shop-page-header .product-type-list li a {
+          color: #248a83;
+          text-decoration: none; }
   .archive-product-type .site-main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -1039,15 +1101,34 @@ object {
           font-size: 14px;
           color: #000; }
 
+.home .site-content {
+  max-width: 100%; }
+
 .home h2 {
-  font-size: 2.4rem;
+  text-transform: uppercase;
+  color: #2f1339;
+  font-size: 38px;
   margin-bottom: 3.75rem;
-  text-align: center; }
+  text-align: center;
+  font-family: 'Novocento Sans Normal';
+  letter-spacing: 2px; }
 
 .home .content-wrapper {
   margin-left: auto;
   margin-right: auto;
   width: 1120px; }
+
+.home .regular-header-logo {
+  display: none; }
+
+.home .home-header .site-header {
+  background: transparent;
+  border: none;
+  color: #fff; }
+  .home .home-header .site-header nav.site-navigation ul li.list-item a {
+    color: #fff; }
+  .home .home-header .site-header nav.site-navigation a.search-toggle {
+    color: #fff; }
 
 .home-hero {
   -ms-flex-align: center;
@@ -1068,9 +1149,6 @@ object {
           justify-content: center;
   height: 100vh; }
 
-.home .header-logo-img {
-  display: inline; }
-
 .home__products {
   margin-bottom: 4.5rem; }
   .home__productsWrapper {
@@ -1082,7 +1160,7 @@ object {
             justify-content: space-between;
     text-align: center; }
   .home__productsType {
-    border: 1px solid orange;
+    border: 1px solid #e1e1e1;
     border-top-width: 5px;
     -webkit-box-flex: 0;
         -ms-flex: 0 1 23.5%;
@@ -1090,7 +1168,7 @@ object {
     max-width: 23.5%;
     padding: .75rem; }
     .home__productsType:hover {
-      border: 1px solid orange;
+      border: 1px solid #d99054;
       border-top-width: 5px; }
     .home__productsType img {
       width: 70px;
@@ -1124,7 +1202,104 @@ object {
     padding: 0.75rem;
     padding-bottom: 1rem; }
   .home__journals h3 {
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #248A83;
     font-size: 1.3rem;
     margin-bottom: 1.75rem; }
+  .home__journals .black-btn {
+    text-transform: uppercase;
+    background-color: transparent;
+    border: 1px solid #000;
+    color: #000;
+    line-height: 1;
+    letter-spacing: normal;
+    margin-right: 6px;
+    padding: .75rem 1.5rem; }
+    .home__journals .black-btn:hover {
+      background-color: #248A83;
+      color: #fff;
+      border: none; }
   .home__journals .entry-meta {
     font-size: .75rem; }
+
+/* Latest Adventure */
+.adventure ul {
+  padding: 0;
+  margin-bottom: 2.5rem; }
+
+.adventure li {
+  width: 270px;
+  height: 270px;
+  margin-left: 20px;
+  color: white;
+  position: relative;
+  overflow: hidden;
+  float: left; }
+  .adventure li:first-child {
+    width: 540px;
+    height: 540px;
+    margin: 0; }
+    .adventure li:first-child img {
+      min-height: 640px; }
+    .adventure li:first-child h3 {
+      font-size: 3rem; }
+  .adventure li:nth-child(2) {
+    width: 560px;
+    height: 250px;
+    margin: 0 0 20px 20px; }
+    .adventure li:nth-child(2) h3 {
+      font-size: 2.5rem; }
+
+.adventure .adventure-img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0; }
+
+.adventure img {
+  width: auto;
+  max-height: 400px;
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -90%);
+          transform: translate(-50%, -90%); }
+
+.adventure .headline {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  padding: 3rem 1.5rem;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+.adventure h3 {
+  font: 1.5rem sans-serif;
+  text-transform: none;
+  margin-bottom: 2.5rem; }
+  .adventure h3 a {
+    color: white; }
+    .adventure h3 a:hover {
+      color: yellow; }
+
+.adventure .white-link a {
+  color: white;
+  border: 1px solid white; }
+
+.adventure .green-link a {
+  font-size: 1.1rem; }
+
+.page-find-us .find-us-container {
+  width: 1120px;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .page-find-us .find-us-container #primary {
+    border-right: 1px solid #e1e1e1;
+    padding-top: 80px; }
+  .page-find-us .find-us-container #secondary {
+    padding-top: 80px; }
