mulitple pages style updated

--- a/themes/inhabitant/sass/_journal.scss
+++ b/themes/inhabitant/sass/_journal.scss
@@ -57,7 +57,7 @@
       color: #fff;
       display: inline-block;
       font-family:  Novecento Sans Web,sans-serif;
-      padding: .4rem;
+      padding: 15px;
       position: absolute;
       right: 0;
       text-transform: uppercase;
@@ -85,3 +85,4 @@
   }
 }
 }
+
