--- a/themes/inhabitant/sass/_footer.scss
+++ b/themes/inhabitant/sass/_footer.scss
@@ -1,7 +1,6 @@
 .site-footer {
   width: 100%;
   height: 355px;
- // background-image:url('<?= get_template_directory_uri() ?>/images/dark-wood.png') repeat;
   padding-top: 4rem;
   color: white;
   line-height: 1.4;
@@ -29,6 +28,9 @@
     }
   }
   h3 {
+    font-family: 'novecento_sans_widedemibold';
+    font-style: normal;
+    letter-spacing: 2px;
     color: #d99054;
     margin-bottom: $base__space-unit;
   }
