--- a/themes/inhabitant/sass/_front-page.scss
+++ b/themes/inhabitant/sass/_front-page.scss
@@ -1,6 +1,7 @@
 .home{
   .site-content {
     max-width: 100%;
+    padding-top: 0;
   }
     h2{
         text-transform: uppercase;
@@ -8,7 +9,9 @@
         font-size: 38px;
         margin-bottom: 3.75rem;
         text-align: center;
-        font-family: 'Novocento Sans Normal';
+        font-weight: 300;
+        font-style: normal;
+
         letter-spacing: 2px;
     }
     .content-wrapper{
@@ -25,7 +28,8 @@
       .site-header {
         background: transparent;
         border: none;
-        color: #fff;
+      color: #fff;
+        
   
         nav.site-navigation {
           ul {
@@ -77,6 +81,11 @@
         width: 70px;
         height: 70px;
     }
+    p{
+      font-size: 16px;
+      font-style:normal;
+      font-family: Merriweather Web,serif;
+    }
 }
 
 }
@@ -104,7 +113,7 @@
     }
     &Info{
         padding: 0.75rem;
-        padding-bottom: 1rem;
+        padding-bottom: 2rem;
     }
     h3{
        letter-spacing: 0.1em;
@@ -138,82 +147,3 @@
 
 }
 
-/* Latest Adventure */
-
-.adventure {
-    ul {
-      padding: 0;
-      margin-bottom: 2.5rem;
-    }
-    li {
-      width: 270px;
-      height: 270px;
-      margin-left: 20px;
-      color: white;
-      position: relative;
-      overflow: hidden;
-      float: left;
-      &:first-child{
-        width: 540px;
-        height: 540px;
-        margin: 0;
-        img {
-          min-height: 640px;
-        }
-        h3 {
-          font-size: 3rem;
-        }
-      }
-      &:nth-child(2){
-        width: 560px;
-        height: 250px;
-        margin: 0 0 20px 20px;
-        h3 {
-          font-size: 2.5rem;
-        }
-      }
-    }
-    .adventure-img {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-    }
-    img {
-      width: auto;
-      max-height: 400px;
-      position: absolute;
-      top: 75%;
-      left: 50%;
-      transform: translate(-50%, -90%);
-    }
-    .headline {
-      position: absolute;
-      top: 0;
-      height: 100%;
-      padding: 3rem 1.5rem;
-      background-color: rgba(0, 0, 0, 0.4);
-    }
-    h3 {
-      font: 1.5rem $font__main;
-      text-transform: none;
-      margin-bottom: 2.5rem;
-      a {
-        color: white;
-        &:hover {
-          color: yellow;
-        }
-      }
-    }
-    .white-link {
-      a {
-        color: white;
-        border: 1px solid white;
-      }
-    }
-    .green-link {
-      a {
-      font-size: 1.1rem;
-      }
-    }
-  }
