--- a/themes/inhabitant/sass/_taxonomy.scss
+++ b/themes/inhabitant/sass/_taxonomy.scss
@@ -1,3 +1,82 @@
-.tax-product_taxonomy {
-    
-}
+
+    .site-content {
+        padding-top: 50px;
+      }
+      
+      .tax-product_taxonomy {
+        display: flex;
+        min-height: 100vh;
+        flex-direction: column;
+        .site-main {
+          display: block;
+      
+          .page-header {
+            margin-bottom: 3rem;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            border-bottom: 1px dashed #c8c8c8;
+            h1 {
+              
+              margin-bottom: 0.5rem;
+            }
+            .single-term-description {
+              p {
+              //  font-family: ;
+                font-size: 1rem;
+                line-height: 1.75;
+                text-transform: none;
+                letter-spacing: normal;
+                margin-bottom: 3rem;
+              }
+            }
+      
+            .shop-term-container {
+              display: flex;
+              width: 300px;
+              margin-left: auto;
+              margin-right: auto;
+              justify-content: space-evenly;
+              a {
+                color: green;
+                text-decoration: none;
+              }
+            }
+          }
+      
+          .product-container {
+            display: grid;
+            grid-template-columns: repeat(4,1fr);
+            grid-gap: 1.5rem;
+            margin-bottom: 1.5rem;
+            width: 1100px;
+            .product-archive {
+             border: 1px solid #e1e1e1;
+            }
+            .thumbnail-container {
+              height: 250px;
+              overflow: hidden;
+              position: relative;
+              background-color: #e1e1e1;
+
+              .archive-product-info{
+                font-size: .9rem;
+                padding: .75rem 1rem;
+
+              }
+      
+              .wp-post-image {
+                left: 50%;
+                min-height: 250px;
+                max-width: none;
+                position: absolute;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                width: auto;
+                border-bottom: 3px solid #e1e1e1;
+              }
+            }
+          }
+        }
+      }
+      
