--- a/themes/inhabitant/sass/style.scss
+++ b/themes/inhabitant/sass/style.scss
@@ -53,7 +53,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 // CSS included in style.css.
 
 @import "normalize";
-@import "fonts";
 @import "typography";
 @import "elements";
 @import "forms";
@@ -71,3 +70,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "front-page";
 @import "find-us";
 @import "taxonomy";
+@import "single";
