--- a/themes/inhabitant/style.css
+++ b/themes/inhabitant/style.css
@@ -43,7 +43,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Page Templates
 	## Front page
 --------------------------------------------------------------*/
-@import url("https://fonts.googleapis.com/css?family=Merriweather:300,400&display=swap");
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -222,23 +221,6 @@ table {
 td,
 th {
   padding: 0; }
-
-/*--------------------------------------------------------------
-# Embedded Fonts
---------------------------------------------------------------*/
-@font-face {
-  font-family: 'Novocento Sans Normal';
-  src: url("../../fonts/novecentosanswide-normal-webfont.eot");
-  src: url("../../fonts/novecentosanswide-normal-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/novecentosanswide-normal-webfont.woff2") format("woff2"), url("../../fonts/novecentosanswide-normal-webfont.woff") format("woff"), url("../../fonts/novecentosanswide-normal-webfont.ttf") format("truetype"), url("../../fonts/novecentosanswide-normal-webfont.svg#novecento_sans_widenormal") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'Novocento Sans Demibold';
-  src: url("../../fonts/novecentosanswide-demibold-webfont.eot");
-  src: url("../../fonts/novecentosanswide-demibold-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/novecentosanswide-demibold-webfont.woff2") format("woff2"), url("../../fonts/novecentosanswide-demibold-webfont.woff") format("woff"), url("../../fonts/novecentosanswide-demibold-webfont.ttf") format("truetype"), url("../../fonts/novecentosanswide-demibold-webfont.svg#novecento_sans_widedemibold") format("svg");
-  font-weight: bold;
-  font-style: normal; }
 
 /*--------------------------------------------------------------
 # Typography
@@ -426,7 +408,7 @@ input[type="search"] {
 
 textarea {
   padding-left: 3px;
-  width: 100%; }
+  width: 90%; }
 
 fieldset {
   border: 0;
@@ -448,7 +430,7 @@ label {
 --------------------------------------------------------------*/
 /* Links */
 a {
-  color: royalblue;
+  color: #248a83;
   text-decoration: none; }
   a:hover, a:focus, a:active {
     color: purple; }
@@ -739,7 +721,7 @@ object {
 /*--------------------------------------------------------------
 # Page Templates
 --------------------------------------------------------------*/
-/* Front page */
+/* about page */
 .about-page-header .site-header {
   position: absolute;
   background: transparent;
@@ -752,7 +734,8 @@ object {
 
 .page-about .site-content {
   margin-left: initial;
-  margin-right: initial; }
+  margin-right: initial;
+  padding-top: 0; }
 
 .page-about .about-container .entry-content .hero-image-header {
   height: 100vh;
@@ -804,6 +787,58 @@ object {
   margin: auto;
   max-width: 1120px; }
 
+/*--------------------------------------------------------------comment--------------------------------------------------------------*/
+.comment {
+  padding-top: 1.5rem; }
+  .comment article {
+    padding-bottom: 1.5rem; }
+
+.comment-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.comment-author cite {
+  font-style: normal;
+  font-weight: 700; }
+
+.comment-author-avatar {
+  border-radius: 50%;
+  height: 64px;
+  margin-right: 1.5rem;
+  overflow: hidden;
+  width: 64px; }
+
+.comment-metadata {
+  color: gray; }
+
+.comment-list {
+  padding-left: 0;
+  margin-left: 0; }
+
+.comment-list > li {
+  border-bottom: 1px solid #e1e1e1; }
+
+.children li {
+  border-top: 1px solid #e1e1e1; }
+
+.comment-form-author, .comment-form-email {
+  float: left; }
+
+.comment-form-author {
+  margin-right: 1%;
+  width: 49%; }
+
+.comment-form-email {
+  margin-left: 1%;
+  width: 49%; }
+
+.comment-form-url {
+  width: 100%; }
+
+.comment-form-cookies-consent {
+  display: none; }
+
 .site-footer {
   width: 100%;
   height: 355px;
@@ -839,6 +874,9 @@ object {
       text-transform: uppercase;
       margin-bottom: 0; }
   .site-footer h3 {
+    font-family: 'novecento_sans_widedemibold';
+    font-style: normal;
+    letter-spacing: 2px;
     color: #d99054;
     margin-bottom: 1.5rem; }
   .site-footer p span {
@@ -974,7 +1012,7 @@ object {
       color: #fff;
       display: inline-block;
       font-family: Novecento Sans Web,sans-serif;
-      padding: .4rem;
+      padding: 15px;
       position: absolute;
       right: 0;
       text-transform: uppercase; }
@@ -1043,13 +1081,17 @@ object {
 
 .archive-product-type {
   width: 100%;
-  margin-top: 57px;
-  padding-top: 48px; }
+  margin-top: 57px; }
   .archive-product-type .shop-page-header {
     border-bottom: 1px dashed #c8c8c8;
     margin-bottom: 3rem;
-    text-align: center;
-    margin-top: 105px; }
+    text-align: center; }
+    .archive-product-type .shop-page-header h2 {
+      text-transform: uppercase;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      font-size: 38px; }
     .post-type-archive .archive-product-type .shop-page-header {
       display: block; }
     .archive-product-type .shop-page-header .product-type-list {
@@ -1066,10 +1108,14 @@ object {
       margin-left: 0;
       padding-left: 0;
       text-transform: uppercase; }
+      .archive-product-type .shop-page-header .product-type-list .taxonomy-button {
+        padding-right: 35px;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; }
       .archive-product-type .shop-page-header .product-type-list li {
         margin: 0 1.5rem; }
         .archive-product-type .shop-page-header .product-type-list li a {
-          color: #248a83;
           text-decoration: none; }
   .archive-product-type .site-main {
     display: grid;
@@ -1102,7 +1148,8 @@ object {
           color: #000; }
 
 .home .site-content {
-  max-width: 100%; }
+  max-width: 100%;
+  padding-top: 0; }
 
 .home h2 {
   text-transform: uppercase;
@@ -1110,7 +1157,8 @@ object {
   font-size: 38px;
   margin-bottom: 3.75rem;
   text-align: center;
-  font-family: 'Novocento Sans Normal';
+  font-weight: 300;
+  font-style: normal;
   letter-spacing: 2px; }
 
 .home .content-wrapper {
@@ -1173,6 +1221,10 @@ object {
     .home__productsType img {
       width: 70px;
       height: 70px; }
+    .home__productsType p {
+      font-size: 16px;
+      font-style: normal;
+      font-family: Merriweather Web,serif; }
 
 .home__journals {
   margin-bottom: 4.5rem; }
@@ -1200,7 +1252,7 @@ object {
     position: relative; }
   .home__journalsInfo {
     padding: 0.75rem;
-    padding-bottom: 1rem; }
+    padding-bottom: 2rem; }
   .home__journals h3 {
     letter-spacing: 0.1em;
     text-transform: uppercase;
@@ -1223,72 +1275,6 @@ object {
   .home__journals .entry-meta {
     font-size: .75rem; }
 
-/* Latest Adventure */
-.adventure ul {
-  padding: 0;
-  margin-bottom: 2.5rem; }
-
-.adventure li {
-  width: 270px;
-  height: 270px;
-  margin-left: 20px;
-  color: white;
-  position: relative;
-  overflow: hidden;
-  float: left; }
-  .adventure li:first-child {
-    width: 540px;
-    height: 540px;
-    margin: 0; }
-    .adventure li:first-child img {
-      min-height: 640px; }
-    .adventure li:first-child h3 {
-      font-size: 3rem; }
-  .adventure li:nth-child(2) {
-    width: 560px;
-    height: 250px;
-    margin: 0 0 20px 20px; }
-    .adventure li:nth-child(2) h3 {
-      font-size: 2.5rem; }
-
-.adventure .adventure-img {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0; }
-
-.adventure img {
-  width: auto;
-  max-height: 400px;
-  position: absolute;
-  top: 75%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -90%);
-          transform: translate(-50%, -90%); }
-
-.adventure .headline {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  padding: 3rem 1.5rem;
-  background-color: rgba(0, 0, 0, 0.4); }
-
-.adventure h3 {
-  font: 1.5rem sans-serif;
-  text-transform: none;
-  margin-bottom: 2.5rem; }
-  .adventure h3 a {
-    color: white; }
-    .adventure h3 a:hover {
-      color: yellow; }
-
-.adventure .white-link a {
-  color: white;
-  border: 1px solid white; }
-
-.adventure .green-link a {
-  font-size: 1.1rem; }
-
 .page-find-us .find-us-container {
   width: 1120px;
   margin: auto;
@@ -1303,3 +1289,116 @@ object {
     padding-top: 80px; }
   .page-find-us .find-us-container #secondary {
     padding-top: 80px; }
+
+.site-content {
+  padding-top: 50px; }
+
+.tax-product_taxonomy {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+  .tax-product_taxonomy .site-main {
+    display: block; }
+    .tax-product_taxonomy .site-main .page-header {
+      margin-bottom: 3rem;
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      border-bottom: 1px dashed #c8c8c8; }
+      .tax-product_taxonomy .site-main .page-header h1 {
+        margin-bottom: 0.5rem; }
+      .tax-product_taxonomy .site-main .page-header .single-term-description p {
+        font-size: 1rem;
+        line-height: 1.75;
+        text-transform: none;
+        letter-spacing: normal;
+        margin-bottom: 3rem; }
+      .tax-product_taxonomy .site-main .page-header .shop-term-container {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        -webkit-box-pack: space-evenly;
+            -ms-flex-pack: space-evenly;
+                justify-content: space-evenly; }
+        .tax-product_taxonomy .site-main .page-header .shop-term-container a {
+          color: green;
+          text-decoration: none; }
+    .tax-product_taxonomy .site-main .product-container {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 1.5rem;
+      margin-bottom: 1.5rem;
+      width: 1100px; }
+      .tax-product_taxonomy .site-main .product-container .product-archive {
+        border: 1px solid #e1e1e1; }
+      .tax-product_taxonomy .site-main .product-container .thumbnail-container {
+        height: 250px;
+        overflow: hidden;
+        position: relative;
+        background-color: #e1e1e1; }
+        .tax-product_taxonomy .site-main .product-container .thumbnail-container .archive-product-info {
+          font-size: .9rem;
+          padding: .75rem 1rem; }
+        .tax-product_taxonomy .site-main .product-container .thumbnail-container .wp-post-image {
+          left: 50%;
+          min-height: 250px;
+          max-width: none;
+          position: absolute;
+          top: 50%;
+          -webkit-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%);
+          width: auto;
+          border-bottom: 3px solid #e1e1e1; }
+
+.single-post .site-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 760px; }
+
+.single-post #secondary {
+  width: 27%;
+  padding-left: 5%; }
+
+.single-post .site-main .content-area {
+  max-width: 800px; }
+
+.single-post .site-main .entry-header {
+  position: relative;
+  -o-object-fit: cover;
+     object-fit: cover;
+  line-height: 0; }
+  .single-post .site-main .entry-header .entry-meta {
+    background-color: #248a83;
+    bottom: 0;
+    color: #fff;
+    display: inline-block;
+    font-family: Novecento Sans Web,sans-serif;
+    padding: 15px;
+    position: absolute;
+    right: 0;
+    text-transform: uppercase; }
+
+.single-post .site-main .entry-title {
+  background-color: #248a83;
+  color: #fff;
+  font-size: 33.6px;
+  font-size: 2.1rem;
+  left: 0;
+  padding: .75rem 1.5rem;
+  position: absolute;
+  margin-top: 2.25rem;
+  max-width: 75%;
+  top: 0;
+  line-height: 1.25; }
+  .single-post .site-main .entry-title a {
+    font-family: sans-serif;
+    color: #fff; }
