--- a/themes/inhabitant/sass/_footer.scss
+++ b/themes/inhabitant/sass/_footer.scss
@@ -28,14 +28,13 @@
     }
   }
   h3 {
-    font-family: 'novecento_sans_widedemibold';
-    font-style: normal;
     letter-spacing: 2px;
     color: #d99054;
     margin-bottom: $base__space-unit;
   }
   p span {
-    font-weight: bold;
+    font-weight: 700;
+    font-family: 'merriweatherbold';
   }
   i {
     margin: 0 .4rem;
