--- a/themes/inhabitant/sass/_journal.scss
+++ b/themes/inhabitant/sass/_journal.scss
@@ -1,5 +1,5 @@
 .journal-type {
-  padding-top: 57px;
+  padding-top: 40px;
   display: flex;
   margin-left: auto;
   margin-right: auto;
@@ -81,6 +81,7 @@
     a {
       font-family:sans-serif;
       color: #fff;
+      font-weight: 600;
     }
   }
 }
