--- a/themes/inhabitant/sass/_page-templates.scss
+++ b/themes/inhabitant/sass/_page-templates.scss
@@ -71,9 +71,8 @@
 .entry-content p {
 
     color: #404040;
-    font-family: Merriweather Web;
+    font-family: Merriweather Web,serif;
     font-size: 16px;
-    font-size: 1rem;
     line-height: 1.75;
     max-width: 800px;
     margin-right: auto;
