--- a/themes/inhabitant/sass/_single-product.scss
+++ b/themes/inhabitant/sass/_single-product.scss
@@ -3,6 +3,7 @@
     .one-product {
       display: flex;
       justify-content: space-between;
+      padding-bottom: 30px;
     }
     .one-product{
     
