--- a/themes/inhabitant/sass/_find-us.scss
+++ b/themes/inhabitant/sass/_find-us.scss
@@ -5,6 +5,17 @@
         display: flex;
         justify-content: center;
 
+        .find-us-title{
+            font-size: 40px;
+        }
+
+        h2{
+            color: #2f1339;
+            font-size: 33.6px;
+            margin-bottom: 1.5rem;
+            text-transform: uppercase;
+        }
+
         #primary {
             border-right: 1px solid #e1e1e1;
             padding-top: 80px;
