--- a/themes/inhabitant/sass/_front-page.scss
+++ b/themes/inhabitant/sass/_front-page.scss
@@ -6,12 +6,12 @@
     h2{
         text-transform: uppercase;
         color: #2f1339;
-        font-size: 38px;
+        font-size: 1.5rem;
         margin-bottom: 3.75rem;
         text-align: center;
-        font-weight: 300;
+        
         font-style: normal;
-
+        
         letter-spacing: 2px;
     }
     .content-wrapper{
