--- a/themes/inhabitant/sass/_taxonomy.scss
+++ b/themes/inhabitant/sass/_taxonomy.scss
@@ -22,12 +22,13 @@
             }
             .single-term-description {
               p {
-              //  font-family: ;
+             
                 font-size: 1rem;
                 line-height: 1.75;
                 text-transform: none;
                 letter-spacing: normal;
                 margin-bottom: 3rem;
+                font-weight: 400;
               }
             }
       
