--- a/themes/inhabitant/sass/_front-page.scss
+++ b/themes/inhabitant/sass/_front-page.scss
@@ -3,7 +3,15 @@
     max-width: 100%;
     padding-top: 0;
   }
-    h2{
+  h2 {
+    text-transform: uppercase;
+    color: #2f1339;
+    font-size: 24px;
+    padding-top: 2rem;
+		letter-spacing: 1px;
+		margin-bottom: 1.4rem;
+	}
+    h1{
         text-transform: uppercase;
         color: #2f1339;
         font-size: 2.4rem;
@@ -151,4 +159,6 @@
 }
 
 }
+
+
 
