--- a/themes/inhabitant/sass/style.scss
+++ b/themes/inhabitant/sass/style.scss
@@ -71,6 +71,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "find-us";
 @import "taxonomy";
 @import "single";
-@import "single-adventure";
+@import "adventures";
 
 
