--- a/themes/inhabitant/sass/_front-page.scss
+++ b/themes/inhabitant/sass/_front-page.scss
@@ -158,6 +158,135 @@
     }
 }
 
+&__adventures{
+  margin-bottom: 4.5rem;
+  ul {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-auto-rows: 2fr;
+      grid-gap: 20px 20px;
+      list-style-type: none;
+      margin-left: 0;
+      padding-left: 0;
+      width: 100%;
+      margin-bottom: 2rem;
+    }
+
+    li {
+      line-height: 1;
+      overflow: hidden;
+      position: relative;
+      width: 100%;
+
+      &::before {
+        content: ' ';
+        display: inline-block;
+        width: 1px;
+        height: 0;
+      }
+
+      &:first-child {
+        grid-column: 1 / span 2;
+        grid-row: 1 / span 2;
+
+        &::before {
+          padding-bottom: calc(100% - 24px);
+        }
+
+        .story-info {
+          h3 {
+            @include font-size(3);
+          }
+        }
+      }
+
+      &:nth-child(2) {
+        grid-column: 3 / span 2;
+        grid-row: 1 / span 1;
+
+        &::before {
+          padding-bottom: calc((100% / 2) - 12px);
+        }
+
+        .story-info {
+          h3 {
+            @include font-size(2.4);
+          }
+        }
+      }
+
+      &:nth-child(3),
+      &:last-child {
+        &::before {
+          padding-bottom: calc((100% / 2) - 12px);
+        }
+
+        .story-info {
+          h3 {
+            @include font-size(1.6);
+          }
+        }
+      }
+    }
+
+    .story-wrapper {
+      bottom: 0;
+      left: 0;
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: 100;
+
+      &:after {
+        background: rgba(0, 0, 0, 0.35);
+        content: '';
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 100;
+      }
+
+      img {
+        left: 50%;
+        max-height: 620px;
+        max-width: none;
+        position: absolute;
+        top: 75%;
+        transform: translate(-50%, -75%);
+        width: auto;
+      }
+    }
+
+    .story-info {
+      margin: $base__space-unit;
+      position: absolute;
+      z-index: 200;
+
+      h3 {
+        font-family: $font__main;
+        font-weight: normal;
+        margin-top: 24px;
+        text-transform: none;
+
+        a {
+          color: white;
+          font-family: 'Merriweather Web';
+
+          &:hover {
+              color: #f0e4d1;
+          }
+        }
+      }
+  }
+  .btn{
+      font-size: 1.2rem;
+      margin-top: 2.25rem;    
+  }
+}
+
+
 }
 
 
