--- a/themes/inhabitant/sass/_header.scss
+++ b/themes/inhabitant/sass/_header.scss
@@ -45,6 +45,7 @@
         .search-form {
             display: flex;
             align-items: center;
+            margin-bottom: 0;
         }
 
         .search-toggle {
@@ -84,4 +85,16 @@
         display: block;
     }
 }
+
+
+
+
+    .postid-110{
+      .site-header{
+        background: none;
+        border-bottom: none;
+
+      }
+    }
+
 
